--- a/src/sass/frontpages/_member.scss
+++ b/src/sass/frontpages/_member.scss
@@ -1,16 +1,7 @@
 //member首圖
 
-.member_top{
-    width: 100%;
-    position: relative;
-    height: 500px;
-    background-image: url(../../img/activity/member_banner.png);
-    background-repeat: no-repeat;
-    background-size: cover; 
-}
-.member_top img{
-    display: block;
-    margin: 0 auto;
+.memberTop.container-fluid{
+    @include top_block("../img/material/membertop.png");
 }
 
 .memberTitle{
