--- a/src/sass/frontpages/_news.scss
+++ b/src/sass/frontpages/_news.scss
@@ -25,7 +25,6 @@
     margin: 0 auto;
     width: 100%;
     height: 220px;
-    margin-left: 15px;
 }
 
 .maintop h3{
@@ -34,6 +33,7 @@
     padding-top: 100px;
     margin: 0;
     font-size: 48px;
+    margin-left: 40px;
 }
 
 .yellow{
@@ -52,9 +52,9 @@
 }
 
 .main_min .min_news{
-    width: 550px;
+    width: 400px;
     text-decoration: none;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .main_min a{
@@ -96,5 +96,15 @@
     margin-top: 30px;
 }
 
+.main_min .a_out{
+    width: 500px;
+    margin-top: 15px;
+}
 
+
+@media screen and (max-width:576px){
+    .min_news{
+        width: 400px;
+    }
+}
 
