--- a/src/sass/layout/_member.tab.scss
+++ b/src/sass/layout/_member.tab.scss
@@ -23,11 +23,21 @@
 
 .mem_tab{
     display: flex;
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     padding-bottom: 60px;
     justify-content: center; 
     margin-top: 20px;
+    @include pad{
+        width: 200px;
+        
+    }
+    @include mobile{
+        width: 100px;
+        
+    }
+    
+    
 }
 
 .mem_btn{
@@ -40,6 +50,16 @@
     border: none;
     margin: 0 auto;
     cursor: pointer;
+    @include pad{
+        width: 100px;
+        font-size: 16px;
+        
+    }
+    @include mobile{
+        width: 60px;
+        font-size: 14px;
+        
+    }
     
     
 }
