--- a/src/sass/frontpages/_animal.scss
+++ b/src/sass/frontpages/_animal.scss
@@ -214,6 +214,7 @@ section:nth-child(even){
 .buttonList li:hover{
     background-color: #FECC55;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 
