feat: back_news新增編輯頁面 font_products三項商品

--- a/src/sass/frontpages/_news.scss
+++ b/src/sass/frontpages/_news.scss
@@ -93,5 +93,15 @@
     .min_news{
         width: 400px;
     }
+    .main_min .a_out{
+        width: 400px;
+    }
 }
+
+@media screen and (max-width:1200px){
+    .main_min .a_out{
+        width: 400px;
+    }
+}
+
 
