--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -16,3 +16,5 @@
 @import 'backpages/back_products';
 @import 'backpages/back_product_detail';
 @import './backpages/back_news';
+@import './backpages/back_additem';
+
