--- a/src/sass/frontpages/_checkout.scss
+++ b/src/sass/frontpages/_checkout.scss
@@ -82,7 +82,7 @@
 			}
 
 			p {
-				margin-top: 70px;
+				margin-top: 50px;
 			}
 			.infoImg {
 				width: 200px;
@@ -94,8 +94,12 @@
 			.garbageCan {
 				width: 20px;
 				height: 20px;
-				margin-top: 70px;
+				margin: 70px 0 0 150px;
 				cursor: pointer;
+
+				@include pad{
+					margin: 0 60px;
+				}
 			}
 			.quantity {
 				width: 30px;
