--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -237,7 +237,11 @@
         left: 0;
         z-index: 1000;
         display: none;
-    
+        
+        &.active{
+            display: block;
+        }
+
         .shoppingCar{
            width: 950px;
            position: absolute;
