fix: 路徑和報錯問題修正

--- a/src/sass/frontpages/_index.scss
+++ b/src/sass/frontpages/_index.scss
@@ -479,7 +479,7 @@
         }
     }
     .memoryText{
-        background-image: url('../../img/material/yellow_textbg.png');
+        background-image: url('../img/material/yellow_textbg.png');
         background-repeat: no-repeat;
         background-size: contain;
         width: 800px;
