--- a/src/layout/back_aside.html
+++ b/src/layout/back_aside.html
@@ -1,13 +1,13 @@
 <aside class="b_aside">
-    <a href="../back_index.html"><img src="../img/logo_white.svg" class="asideLogo"></a>
+    <a href="./back_index.html"><img src="./img/logo_white.svg" class="asideLogo"></a>
     
     <ul class="aside_ul">
 
-        <li><a href="../member_mg.html"><h5>會員查詢</h5></a></li>
-        <li><a href="#"><h5>最新消息管理</h5></a></li>
-        <li><a href="../back_products.html"><h5>商品管理</h5></a></li>
-        <li><a href="#"><h5>訂單管理</h5></a></li>
-        <li><a href="../back_activity.html"><h5>活動管理</h5></a></li>
+        <li><a href="./member_mg.html"><h5>會員查詢</h5></a></li>
+        <li><a href="./back_news.html"><h5>最新消息管理</h5></a></li>
+        <li><a href="./back_products.html"><h5>商品管理</h5></a></li>
+        <li><a href="./back_order.html"><h5>訂單管理</h5></a></li>
+        <li><a href="./back_activity.html"><h5>活動管理</h5></a></li>
     </ul>
-    <a href="../back_login.html" class="signOut"><h5>登出</h5></a>
+    <a href="./back_login.html" class="signOut"><h5>登出</h5></a>
 </aside>
