--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,9 +1,9 @@
 <header class="frontHeader">
 	<nav class="main_sel container-lg">
 		<h1>
-			<a href="index.html"
-				><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"
-			/></a>
+			<a href="index.html">
+				<img src="./img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"/>
+			</a>
 		</h1>
 		<div class="navRight">
 			<a href="#" class="head-icon" id="cart"
