--- a/src/sass/frontpages/_activity.scss
+++ b/src/sass/frontpages/_activity.scss
@@ -1,5 +1,5 @@
 .activityTop.container-fluid{
-    @include top_block("../img/activity/activity_banner.png");
+    @include top_block("../img/activity/activity_banner.jpg");
 }
 
 .checkList {
