--- a/src/sass/frontpages/_info.scss
+++ b/src/sass/frontpages/_info.scss
@@ -1,5 +1,5 @@
 .infoTop.container-fluid{
-    @include top_block("../img/info/info_top.png");
+    @include top_block("../img/info/info_top.jpg");
 }
 
 .infoLocation{
