--- a/src/sass/frontpages/_member.scss
+++ b/src/sass/frontpages/_member.scss
@@ -1,7 +1,7 @@
 //member首圖
 
 .memberTop.container-fluid{
-    @include top_block("../img/material/membertop.png");
+    @include top_block("../img/material/membertop.jpg");
 }
 
 .memberTitle{
