--- a/src/sass/frontpages/_products.scss
+++ b/src/sass/frontpages/_products.scss
@@ -1,5 +1,5 @@
 .productsTop.container-fluid{
-    @include top_block("../img/porducts/topbg.png");
+    @include top_block("../img/porducts/topbg.jpg");
 }
 
 
