--- a/src/sass/frontpages/_animal.scss
+++ b/src/sass/frontpages/_animal.scss
@@ -1,5 +1,5 @@
 .animalTop.container-fluid{
-    @include top_block("../img/animal/animal_banner.png");
+    @include top_block("../img/animal/animal_banner.jpg");
 }
 
 .animal_banner{
