--- a/src/sass/frontpages/_game.scss
+++ b/src/sass/frontpages/_game.scss
@@ -39,12 +39,16 @@
 
     p {
         padding-top: 20px;
-        margin-bottom: 50px;
+        margin-bottom: 80px;
         text-align: center;
+        @include pad{
+            padding-top: 0;
+            margin-bottom: 50px;
+        }
     }
 
     .game-bg {
-        background-image: url("../img/game/game-bg.png");
+        background-image: url("../img/game/game-bg.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         width: 100%;
@@ -77,7 +81,6 @@
         display: block;
         display: none;
         width: 115%;
-        padding-left: 20px;
         padding-top: 10px;
     }
 
