data: 前後台活動頁圖片調整

--- a/src/sass/backpages/_back_activity.scss
+++ b/src/sass/backpages/_back_activity.scss
@@ -43,10 +43,9 @@
             .actImgCon{
                 width: 150px;
                 height: 150px;
-                display: flex;
-                align-items: center;
                 position: relative;
                 overflow: hidden;
+                margin-left: 10px;
                 img{
                     width: 100%;
                     @include positionCenter();
