--- a/src/sass/backpages/_back_activity_detail.scss
+++ b/src/sass/backpages/_back_activity_detail.scss
@@ -11,13 +11,12 @@
         border: 1px solid $color_G;
         width: 100%;
         height: 400px;
+        margin: 0 auto;
         display: flex;
         justify-content: center;
-        align-items: center;
         overflow: hidden;
             .preview-img{
-                max-width: 95%;
-                max-height: 95%;
+                max-width: 100%;
             }
 
         }
