--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -17,4 +17,4 @@
 @import 'backpages/back_product_detail';
 @import './backpages/back_news';
 @import './backpages/back_additem';
-
+@import 'backpages/back_order';
