--- a/src/sass/backpages/_back_news.scss
+++ b/src/sass/backpages/_back_news.scss
@@ -103,7 +103,7 @@ margin-left: 80px;
 .down{
     height: 60px;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-right: 150px;
 }
 
