--- a/src/sass/frontpages/_news.scss
+++ b/src/sass/frontpages/_news.scss
@@ -58,7 +58,7 @@
 
 .down_a{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     font-size: $fs-s;
     margin-top: 10px;
     margin-bottom: 0;
