--- a/src/sass/frontpages/_checkout.scss
+++ b/src/sass/frontpages/_checkout.scss
@@ -6,20 +6,31 @@
 		color: #79d4cf;
         @include textCenter();
         justify-content: center;
+		align-items: center;
         position: relative;
-        li:after{
-            content: "";
-            width: 400px;
-            height: 1px;
-            background-color: $color_G;
-            position: absolute;
-            top: 40px;
-            left: 35%;
-            z-index: -1;
-			@include pad{
-				left: 170px;
-			}
-        }
+        // li:after{
+        //     content: "";
+        //     width: 400px;
+        //     height: 1px;
+        //     background-color: $color_G;
+        //     position: absolute;
+        //     top: 40px;
+        //     left: 35%;
+        //     z-index: -1;
+		// 	@include pad{
+		// 		left: 170px;
+		// 	}
+        // }
+		span{
+			width: 100px;
+			height: 1px;
+			background-color: $color_G;
+			color: $color_G;
+			margin: 0 5px;
+		}
+		p{
+			margin: 0;
+		}
         .stepNB{
             font-size: $fs-m;
             border: 1px solid #79d4d0ab;
@@ -29,7 +40,7 @@
             width: 60px;
             height: 60px;
             padding-top: 15px;
-            margin: 10px 80px;
+			margin: 10px auto;
         }
         // ======== 換步驟 ========
         .active {
@@ -50,6 +61,9 @@
 		display: grid;
 		@include pad{
 			width: 650px;
+		}
+		@include mobile{
+			width: 450px;
 		}
 
 		.carName {
@@ -82,7 +96,13 @@
 			}
 
 			p {
-				margin-top: 50px;
+				margin-top: 70px;
+				@include pad{
+					margin-top: 50px;
+				}
+				@include mobile{
+					margin-top: 40px;
+				}
 			}
 			.infoImg {
 				width: 200px;
@@ -94,11 +114,14 @@
 			.garbageCan {
 				width: 20px;
 				height: 20px;
-				margin: 70px 0 0 150px;
+				margin-top: 70px;
 				cursor: pointer;
 
 				@include pad{
-					margin: 0 60px;
+					margin: 0px 20px 0 190px;
+				}
+				@include mobile{
+					margin: 0px 20px 0 120px;
 				}
 			}
 			.quantity {
@@ -131,6 +154,9 @@
 			@include textCenter();
 			padding: 20px 200px;
 			border: 1px solid #c4c4c4;
+			@include mobile{
+				padding: 20px 100px;
+			}
 		}
 	}
 	.gotoPay {
@@ -147,7 +173,6 @@
 }
 // ============ 結帳流程二 ============
 .stepB {
-	// display: none;
 	// *********** 表格標題 ***********
 	.carName2-1 {
 		background-color: $color_Y;
@@ -164,6 +189,13 @@
 	.step2 {
 		margin: 100px auto 0;
 		width: 1000px;
+
+		@include pad{
+			width: 650px;
+		}
+		@include mobile{
+			width: 450px;
+		}
 		// =================== 表格1 總計 ===================
 		// *********** 總計表格標題 ***********
 		.carName2 {
@@ -179,6 +211,11 @@
 			.titleTop {
 				font-size: $fs-s;
 			}
+			.titleDown{
+				@include mobile{
+					margin-top: 10px;
+				}
+			}
 		}
 		// *********** 欄位標題 ***********
 		.carTitle {
@@ -191,34 +228,63 @@
 		// *********** 購買商品列 ***********
 		.carInfo {
 			display: grid;
-			grid-template-columns: 20% 20% 20% 15% 25%;
+			grid-template-columns: 40% 20% 15% 25%;
 			@include textCenter();
+
+			.imgInfo{
+				display: flex;
+				@include mobile{
+					display: block;
+				}
+			}
 
 			p {
 				margin-top: 70px;
+				@include pad{
+					margin-top: 40px;
+				}
 			}
 			.infoImg {
 				width: 200px;
-				@include marginCenter();
+				margin: 0 15px;
+
+				@include pad{
+					width: 100px;
+				}
+				@include mobile{
+					margin: 0;
+				}
 			}
 		}
 		.lastTotal {
 			border: 1px solid #c4c4c4;
 			padding: 10px 0 10px 82%;
+
+			@include mobile{
+				padding: 10px 0 10px 75%;
+			}
 		}
 		// =================== 表格2 送貨資訊 ===================
 		// ----------- 送貨資訊欄位 -----------
 		.send {
 			padding: 10px 50px;
 			border: 1px solid #c4c4c4;
-			// @include textCenter();
 			display: grid;
 			grid-template-columns: 50% 50%;
 			border-bottom: none;
+			@include pad{
+				padding: 10px;
+			}
 
 			.sendIn {
 				display: block;
 				padding: 5px 100px;
+				@include pad{
+					padding: 5px 50px;
+				}
+				@include mobile{
+					padding: 5px 10px;
+				}
 			}
 			.np {
 				display: inline;
@@ -228,16 +294,35 @@
 				border: 1px solid #c4c4c4;
 				border-radius: 8px;
 				padding: 5px;
+
+				@include pad{
+					margin: 5px 50px;
+				}
+				@include mobile{
+					margin: 5px 10px;
+					width: 185px;
+				}
 			}
 		}
 		.addressout {
 			border: 1px solid #c4c4c4;
 			border-top: none;
 			padding: 0 50px;
+
+			@include pad{
+				padding: 0;
+			}
 			.addressin {
+
 				.sendIn {
 					display: block;
 					padding: 5px 100px;
+					@include pad{
+						padding: 5px 60px;
+					}
+					@include mobile{
+						padding: 5px 20px;
+					}
 				}
 				.sendAddress {
 					display: block;
@@ -246,11 +331,26 @@
 					margin: 10px 100px;
 					border: 1px solid #c4c4c4;
 					border-radius: 8px;
+					@include pad{
+						width: 400px;
+						margin: 10px 60px;
+					}
+					@include mobile{
+						width: 400px;
+						margin: 5px 20px;
+					}
 				}
 				.checkSame {
 					margin: 15px 10px 15px 100px;
 					width: 20px;
 					height: 20px;
+
+					@include pad{
+						margin: 15px 10px 15px 60px;
+					}
+					@include mobile{
+						margin: 15px 10px 15px 30px;
+					}
 				}
 			}
 		}
@@ -260,6 +360,9 @@
 		border: 1px solid #c4c4c4;
         .paymain {
 			padding-left: 80px;
+			@include mobile{
+				padding-left: 40px;
+			}
 			p {
 				margin: 5px 0 5px 20px;
 			}
@@ -286,7 +389,13 @@
         padding: 20px;
         display: grid;
         grid-template-columns: 100%;
-        // display: none;
+
+		@include pad{
+			padding: 50px;
+		}
+		@include mobile{
+			padding: 10px;
+		}
     
         .card_infoI {
             display: grid;
@@ -294,6 +403,11 @@
             @include textCenter();
             @include marginCenter();
             width: 90%;
+			@include pad{
+				grid-template-columns: 100%;
+				text-align: left;
+				padding: 10px;
+			}
             .cardAll{
                 margin: 15px;
             }
@@ -310,6 +424,10 @@
             .cardname {
                 text-align: left;
                 padding-left: 35px;
+				
+				@include pad{
+					padding: 0;
+				}
             }
             // 安全碼
             #CSC {
@@ -357,10 +475,20 @@
     @include textCenter();
     h3{
         margin-bottom: 30px;
+
+		@include pad{
+			font-size: $fs-m;
+		}
     }
+	h5{
+		@include pad{
+			font-size: $fs-xs;
+		}
+	}
     .myMB{
         color: $color_B;
         text-decoration: underline;
+
     }
 
 	.gogoa{
