--- a/src/sass/frontpages/_products.scss
+++ b/src/sass/frontpages/_products.scss
@@ -48,7 +48,7 @@
 
 .main_in .list{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-right: 330px;
     margin-top: 30px;
     margin-bottom: 28px;
