feat 會員頁整合成一頁 原本會員中心landingpage刪除 改成預設在會員修改頁

--- a/src/sass/frontpages/_member_activity.scss
+++ b/src/sass/frontpages/_member_activity.scss
@@ -9,28 +9,19 @@
 
 //btn
 
-.mem_tab{
-    display: flex;
-    width: 1200px;
-    margin: 0 auto;
-    padding-bottom: 60px;
-    justify-content: center; 
-    margin-top: 20px;
-}
-
-.mem_btn{
-    color: white;
-    background-color:$color_G;
-    width: 350px;
-    height: 72px;
-    border-radius: 8px;
-    font-size: 24px;
-    border: none;
-    margin: 0 auto;
-    cursor: pointer;
+// .mem_btn{
+//     color: white;
+//     background-color:$color_G;
+//     width: 350px;
+//     height: 72px;
+//     border-radius: 8px;
+//     font-size: 24px;
+//     border: none;
+//     margin: 0 auto;
+//     cursor: pointer;
     
     
-}
+// }
 
 // .mem_act{
 //     color: white;
