--- a/src/sass/layout/_member.tab.scss
+++ b/src/sass/layout/_member.tab.scss
@@ -1,79 +1,34 @@
-//member首圖
+//tab 切換按鈕
 
-.member_top{
-    position: relative;
-   }
-   .member_top img{
-       display: block;
-       margin: 0 auto;
-   }
-   
-   .memberTitle{
-       text-align: center;
-       display: block;
-       position: absolute; 
-       top: 50%; 
-       left: 50%; 
-       transform: translate(-50%, -50%); 
-       color: $color_W;
-        }
-
-
-//tab bar 
-
-.mem_tab{
+//外框
+.mem_tab {
     display: flex;
-    width: 100%;
-    margin: 0 auto;
-    padding-bottom: 60px;
+    margin: 40px ;
     justify-content: center; 
-    margin-top: 20px;
-    @include pad{
-        width: 200px;
-        
+    align-items: center; 
+    @include mobile {
+        width: 80px;
     }
-    @include mobile{
-        width: 100px;
-        
-    }
-    
-    
 }
 
-.mem_btn{
+
+//預設按鈕
+.mem_btn {
     color: white;
-    background-color:$color_G;
-    width: 300px;
+    background-color: $color_G;
+    width: 20%;
     height: 64px;
     border-radius: 8px;
     font-size: 20px;
     border: none;
-    margin: 0 auto;
+    margin:0 6%;
     cursor: pointer;
-    @include pad{
-        width: 100px;
-        font-size: 16px;
-        
+
+    &.on {
+        background-color: $color_Y;
     }
-    @include mobile{
-        width: 60px;
-        font-size: 14px;
-        
-    }
-    
-    
+
+
 }
 
-//hover
-
-.mem_tab .on{
-    color: white;
-    background-color:$color_Y;
-    width: 300px;
-    height: 64px;
-    border-radius: 8px;
-    font-size: 20px;
-    border: none;
-    margin: 0 auto;
-    cursor: pointer; 
-}
+//當前頁面按鈕
