--- a/src/sass/frontpages/_product_detail.scss
+++ b/src/sass/frontpages/_product_detail.scss
@@ -30,7 +30,7 @@
 
     .pd_pic {
       width: 590px;
-      margin-right: 30px;
+      margin:0 30px 0 10px;
       // display: flex;
       // align-items: flex-start;
       flex-wrap: wrap;
@@ -345,7 +345,7 @@
 
 // 水平線hr
 .pd__hr {
-  width: 90%;
+  width: 95%;
   border: 1px solid #ccc;
   margin: 30px auto;
 }
