fix: 圖片和a連結路徑錯誤修正

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="spOrout">
                             <button class="gosp" id="gosp">繼續購物</button>
-                            <a href="../checkout.html"><button class="Co">結帳</button></a>
+                            <a href="./checkout.html"><button class="Co">結帳</button></a>
                         </div>
                     </ul>
                 </div>
