--- a/src/sass/backpages/_back_order.scss
+++ b/src/sass/backpages/_back_order.scss
@@ -1,6 +1,6 @@
 .order-container{
 	.btn_area {
-		width: 1000px;
+		width: 900px;
 		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
@@ -61,8 +61,9 @@
 	
 	
 	#page_area {
-		width: 1000px;
+		width: 900px;
 		margin: 0 auto;
+		padding-bottom: 80px;
 		ul {
 			display: flex;
 			float: right;
