--- a/src/sass/frontpages/_member_revise.scss
+++ b/src/sass/frontpages/_member_revise.scss
@@ -13,6 +13,11 @@
     height: 400px;
     border-radius: 8px;
     margin: 0 auto;
+    @include mobile{
+        width: 370px;
+    
+    }
+    
    
     }
    
